guestbook/ingress-kustomize-guestbook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kustomize-guestbook-ingress
  namespace: kustomize-guestbook
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kustomize-guestbook-ui
            port:
              number: 80
    host: guestbook.nexus.io
  tls:
  - hosts:
    - guestbook.nexus.io
